// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTopComponent Rendering Should render 1`] = `
<yoo-card-sticky
  class="hydrated"
  data-yoo-card-sticky-host=""
>
  
  <div
    attr-layout="row"
    class="outer-container image"
    data-yoo-card-sticky=""
  >
    <div
      class="gradient-container"
      data-yoo-card-sticky=""
    >
      <div
        attr-layout="column"
        class="text-container"
        data-yoo-card-sticky=""
      >
        
      </div>
    </div>
  </div>
</yoo-card-sticky>
`;

exports[`CardTopComponent Rendering Should render with an entry 1`] = `
<yoo-card-sticky
  class="hydrated"
  data-yoo-card-sticky-host=""
>
  
  <div
    attr-layout="row"
    class="outer-container image"
    data-yoo-card-sticky=""
    style="background-repeat: no-repeat; background-size: cover; background-position-x: 5;0%; background-image: url(https://images.unsplash.com/photo-1481905997796-447b27c82b80?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8c29ff4b605cdb0ab24fd7346ab440a5&auto=format&fit=crop&w=1050&q=80);"
  >
    <div
      class="gradient-container"
      data-yoo-card-sticky=""
    >
      <div
        attr-layout="column"
        class="text-container"
        data-yoo-card-sticky=""
      >
        <div
          class="category"
          data-yoo-card-sticky=""
        >
          <span
            data-yoo-card-sticky=""
          >
            CAREERS
          </span>
        </div>
        <div
          class="title"
          data-yoo-card-sticky=""
        >
          <span
            data-yoo-card-sticky=""
          >
            Job Interview? Here's what to do
          </span>
        </div>
        <yoo-button
          class="gradient-success small hydrated"
          data-yoo-button-host=""
          data-yoo-card-sticky=""
        >
          
          <button
            class="container"
            data-yoo-button=""
          >
            <div
              class="value"
              data-yoo-button=""
              data-yoo-button-slot=""
            >
              Read More
              
            </div>
          </button>
        </yoo-button>
      </div>
    </div>
  </div>
</yoo-card-sticky>
`;
